# LifeMetrics

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
apps/core/: api.py  auth.py  middleware.py  models.py  tasks.py
apps/food/: admin.py  api.py  apps.py  models.py  schemas.py  services.py  tasks.py
apps/goals/: admin.py  api.py  apps.py  models.py  tasks.py
apps/sleep/: admin.py  api.py  apps.py  models.py
apps/telegram_bot/: api.py  bot.py  handlers.py  keyboards.py  states.py  tasks.py
apps/telegram_bot/management/commands/: run_telegram_bot.py
apps/users/: admin.py  api.py  models.py  schemas.py  services.py
apps/workouts/: admin.py  api.py  models.py
config/: celery.py  urls.py
config/settings/: __init__.py  base.py  dev.py  prod.py
nginx/: nginx.conf
